Removed distribution-specific stuff from 'make install' (bug #254)
The problem is vzctl's make install installs /etc/init.d/vz and
/etc/sysconfig/network-scripts/*venet0.

/etc/init.d/vz is RedHat/SUSE specific and does not make sense on, say, Gentoo.
So this needs to be removed from make install (and added to
make install-redhat).

/etc/sysconfig/network-scripts/*venet0 is RedHat-specific as well. Same
applies.

http://bugzilla.openvz.org/254

--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@
 	* added syscall numbers for powerpc
 	* /etc/init.d/vz: check for /dev/vzctl only after modprobe (bug #204)
 	* fixed ppc64 compilation
+	* removed distro-specific stuff from 'make install' (bug #254)
 
    3.0.11: Mon Aug  7 2006 <igor@openvz.ru>
 	* fixed using VE_ROUTE_SRC_DEV variable
