Added Gentoo-specific init.d script and 'make install-gentoo' (bug #262)

--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,7 @@
 	* /etc/init.d/vz: check for /dev/vzctl only after modprobe (bug #204)
 	* fixed ppc64 compilation
 	* removed distro-specific stuff from 'make install' (bug #254)
+	* added 'make install-gentoo' and Gentoo init.d/vz script (bug #262)
 
    3.0.11: Mon Aug  7 2006 <igor@openvz.ru>
 	* fixed using VE_ROUTE_SRC_DEV variable
