--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,7 @@
 	* fixed ppc64 compilation
 	* removed distro-specific stuff from 'make install' (bug #254)
 	* added 'make install-gentoo' and Gentoo init.d/vz script (bug #262)
+	* fixed arpsend options parsing for some compilers (bug #261)
 
    3.0.11: Mon Aug  7 2006 <igor@openvz.ru>
 	* fixed using VE_ROUTE_SRC_DEV variable
